# Tauros

./: .gitignore  .gitmodules  Cargo.toml  PreBuildSteps.bat  Tauros.uplugin  build.rs
.cargo/: config.toml
Source/Tauros/: Tauros.Build.cs  Tauros.cpp  Tauros.h
Source/Tauros/Oidc/: TaurosOidcBridge.h  TaurosOidcLibrary.cpp  TaurosOidcLibrary.h  TaurosOidcSubsystem.cpp  TaurosOidcSubsystem.h  TaurosOidcTypes.h
Source/Tauros/System/: TaurosLibrary.cpp  TaurosLibrary.h  TaurosSubsystem.cpp  TaurosSubsystem.h
ffi/: index.rs  oidc.rs
