[package]
name = "tauros"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "*" }
cxx = { version = "*", features = ["std", "c++20"] }
openidconnect = { version = "*" }
cxx_async = { path = "./crates/cxx-async/cxx-async", package = "cxx-async" }

axum = { version = "*" }
serde = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread"] }
webbrowser = { version = "*" }
once_cell = { version = "*" }

[build-dependencies]
cxx-build = "*"


[lib]
crate-type = ["cdylib"]
path = "ffi/index.rs"

[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
codegen-units = 8
opt-level = 0

[profile.release]
panic = "unwind"
